# ncps-rust

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  ncp_wiring.rs  save_load.rs  training_demo.rs
src/: activation.rs  lib.rs
src/cells/: cfc_cell.rs  lstm_cell.rs  ltc_cell.rs  mod.rs  wired_cfc_cell.rs
src/rnn/: cfc.rs  ltc.rs  mod.rs
src/wirings/: base.rs  mod.rs  ncp.rs  random.rs
tests/: activation_test.rs  cfc_cell_test.rs  ltc_cell_test.rs  wired_cfc_cell_test.rs  wirings_test.rs
